--- a/src/diagramador/templates/exam/base.tex.j2
+++ b/src/diagramador/templates/exam/base.tex.j2
@@ -116,14 +116,13 @@
     \item 
         Constante de Planck, $h = \qty{6,6e-34}{m^2.kg.s^{-1}}$
     \item 
+        Permissividade do vácuo, $\varepsilon_0 = \qty{8.85e-12}{C^2.N^{-1}m^{-2}}$
+    \item 
+        Velocidade da luz no vácuo, $c = \qty{3e8}{m.s^{-1}}$
+    \item 
         Constante de Rydberg, $\mathcal{R} = \qty{1,1e7}{m^{-1}}$
     \item 
         Constante de autoionização da água, $K_\mathrm{w} = \num{1e-14}$
-    \item 
-        Velocidade da luz no vácuo, $c = \qty{3e8}{m.s^{-1}}$
-    \end{itemize}
-    \minisec{Definições}
-    \begin{itemize}
     \item 
         Composição do ar atmosférico: $79\%\; \ce{N2}$ e $21\%\; \ce{O2}$
     \end{itemize}
@@ -154,7 +153,6 @@
 ((* endif *))
 ((# APÓS OS DADOS ADICIONAIS #))
 ((* block after_data *))
-\bigskip
 ((* endblock *))
 
 ((# PROBLEMAS #))
