--- a/src/diagramador/templates/problem/solution.tex.j2
+++ b/src/diagramador/templates/problem/solution.tex.j2
@@ -4,9 +4,10 @@
 % Gabriel Braun, 2024
 %
 
+((* if solution *))
 \begin{solution}((* if answer *))[Gabarito: (((answer)))]((* endif +*))
-
 ((( solution )))
-
 \end{solution}
-
+((* else *))
+\minisec{Gabarito: (((answer)))}
+((* endif *))
