base de dados sem hardcode

--- a/src/diagramador/templates/exam/base.tex.j2
+++ b/src/diagramador/templates/exam/base.tex.j2
@@ -142,10 +142,12 @@
         $\ln 10 = \num{2,3}$
     \end{itemize}
     ((# DADOS DA TABELA PERIÓDICA #))
-    \minisec{Elementos químicos}
     ((* block elements *))
     ((* if elements *))
-    \ElementTable{((* for element in elements *)) (((element))), ((* endfor*))}
+    \minisec{Elementos químicos}
+    \begin{center}
+        \ElementTable{((* for element in elements *)) (((element))), ((* endfor*))}
+    \end{center}
     ((* endif *))
     ((* endblock *))
 }
