--- a/src/diagramador/templates/exam/base.tex.j2
+++ b/src/diagramador/templates/exam/base.tex.j2
@@ -31,6 +31,10 @@
 ((* endif *))
 ((* endfor *))
 
+((# COMANDOS ADICIONAIS NO PREÂMBULO #))
+((* block preamble *))
+((* endblock *))
+
 ((# INÍCIO DO CONTEÚDO #))
 \begin{document}
 ((* block content *))
