--- a/src/diagramador/templates/exam/prova.tex.j2
+++ b/src/diagramador/templates/exam/prova.tex.j2
@@ -2,6 +2,10 @@
 
 ((* block class *))pensi((* endblock *))
 
+((* block preamble *))
+\usepackage{crimson, eulervm}
+((* endblock *))
+
 ((* block content *))
 \maketitle
 \begin{center}
