--- a/src/diagramador/templates/exam/gabarito.tex.j2
+++ b/src/diagramador/templates/exam/gabarito.tex.j2
@@ -1,6 +1,8 @@
 ((* extends "exam/base.tex.j2" *))
 
-((* block template *))gabarito((* endblock *))
+((* block preamble *))
+\examoptions{fontsize = 10pt}
+((* endblock *))
 
 ((* block problems *))
 
