--- a/src/diagramador/templates/exam/base.tex.j2
+++ b/src/diagramador/templates/exam/base.tex.j2
@@ -61,7 +61,7 @@
 {
     \small
     \minisec{Convenções}
-    \begin{datalist}
+    \begin{itemize}
     \item   
         Considere o sistema de coordenadas cartesiano, a menos que haja indicação contrária.
     \item 
@@ -72,7 +72,7 @@
         $\mathbb{C}$ denota o conjunto dos números complexos.
     \item 
         $i$ denota a unidade imaginária, $i^2 = -1$.
-    \end{datalist}
+    \end{itemize}
 }
 ((* endblock *))
 ((* endif *))
@@ -82,7 +82,7 @@
 {
     \small
     \minisec{Dados}
-    \begin{datalist}
+    \begin{itemize}
     \item 
         Aceleração local da gravidade, $g = \qty{10}{m.s^{-2}}$
     \item 
@@ -93,12 +93,12 @@
         Carga elementar, $e = \qty{1,6e-19}{C}$
     \item 
         Constante de Planck, $h = \qty{6,6e-34}{m^2.kg.s^{-1}}$
-    \end{datalist}
+    \end{itemize}
     \minisec{Aproximações Numéricas}
-    \begin{datalist}
+    \begin{itemize}
     \item 
         $(1 + \alpha)^n \approx 1 + n \alpha$ para $|\alpha| \ll 1$
-    \end{datalist}
+    \end{itemize}
 }
 ((* endblock *))
 ((* endif *))
@@ -108,7 +108,7 @@
 {
     \small
     \minisec{Dados}
-    \begin{datalist}
+    \begin{itemize}
     \item 
         Constante de Avogadro, $N_\mathrm{A} = \qty{6,02e23}{mol^{-1}}$
     \item 
@@ -129,9 +129,9 @@
         Constante de autoionização da água, $K_\mathrm{w} = \num{1e-14}$
     \item 
         Composição do ar atmosférico: $79\%\; \ce{N2}$ e $21\%\; \ce{O2}$
-    \end{datalist}
+    \end{itemize}
     \minisec{Aproximações numéricas}
-    \begin{datalist}
+    \begin{itemize}
     \item 
         $\sqrt{2} = \num{1,4}$
     \item 
@@ -144,7 +144,7 @@
         $\log 3 = \num{0,5}$
     \item 
         $\ln 10 = \num{2,3}$
-    \end{datalist}
+    \end{itemize}
     ((# DADOS DA TABELA PERIÓDICA #))
     ((* block elements *))
     \minisec{Elementos químicos}
