Gabarito curto apenas quando há resposta curta

--- a/src/diagramador/templates/problem/solution.tex.j2
+++ b/src/diagramador/templates/problem/solution.tex.j2
@@ -8,6 +8,6 @@
 \begin{solution}((* if answer *))[Gabarito: (((answer)))]((* endif +*))
 ((( solution )))
 \end{solution}
-((* else *))
+((* elif answer *))
 \minisec{Gabarito: (((answer)))}
 ((* endif *))
