--- a/src/diagramador/templates/exam/base.tex.j2
+++ b/src/diagramador/templates/exam/base.tex.j2
@@ -31,6 +31,11 @@
 ((* endif *))
 ((* endfor *))
 
+((# PACOTES ADICIONAIS #))
+((* for package in packages *))
+\usepackage{(((package)))}
+((* endfor *))
+
 ((# COMANDOS ADICIONAIS NO PREÂMBULO #))
 ((* block preamble *))
 ((* endblock *))
